# cuBlackDream

./: .gitignore  .gitmodules  README.md  conftest.py  requirements.txt
CuISOX/DataWrangling/Kaggle/: DigitRecognizer.py
CuISOX/PyTorch/RecurrentNeuralNetworks/: LSTM.py
CuISOX/PyTorch/Transformers/: Attention.py  __init__.py
CuISOX/utilities/: configure_paths.py
CuISOX/utilities/DataIO/: KagglePaths.py
Data/: Metadata.yml
Documents/: DeepLearningDump.tex
Notebooks/Data/Kaggle/: DigitRecognizer.ipynb
Notebooks/RecurrentNeuralNetworks/: LSTM.ipynb
Scripts/PyTorchDocker/: RunDocker.sh  SetupPyTorchDocker.sh  docker-compose.yaml
Scripts/TensorFlowDocker/: Setup.sh  docker-compose.yaml
Source/: CMakeLists.txt
Source/Activation/: CMakeLists.txt  Forward.h
Source/Activation/ManageDescriptor/: ActivationDescriptor.cu  ActivationDescriptor.h  SetDescriptor.cu  SetDescriptor.h
Source/Algebra/: CMakeLists.txt
Source/DataWrangling/: CMakeLists.txt
Source/DataWrangling/Kaggle/: ParseDigitRecognizer.cpp  ParseDigitRecognizer.h  (+2 more)
Source/DeepNeuralNetwork/: CMakeLists.txt  CuDNNLibraryHandle.cu  CuDNNLibraryHandle.h  GetCuDNNVersion.cu  GetCuDNNVersion.h  GetCuDNNVersion_main.cu
Source/FrontEnd/: CMakeLists.txt
Source/IntegrationTests/: CMakeLists.txt
Source/IntegrationTests/DataWrangling/Kaggle/: ParseDigitRecognizer_tests.cpp
Source/Networks/: CMakeLists.txt
Source/RecurrentNeuralNetwork/: CMakeLists.txt  Parameters.cu  Parameters.h  SequenceLengthArray.cu  SequenceLengthArray.h  WeightSpace.cu  WeightSpace.h  WorkAndReserveSpaces.cu  WorkAndReserveSpaces.h
Source/RecurrentNeuralNetwork/ManageDescriptor/: CellDescriptor.h  DataDescriptor.cu  DataDescriptor.h  Descriptor.cu  Descriptor.h  DropoutDescriptor.cu  DropoutDescriptor.h  HiddenDescriptor.cu  HiddenDescriptor.h  InputDescriptor.cu  InputDescriptor.h  LibraryHandleDropoutRNN.cu  LibraryHandleDropoutRNN.h  OutputDescriptor.cu  OutputDescriptor.h  SetDataDescriptor.cu  SetDataDescriptor.h  SetDropoutDescriptor.cu  SetDropoutDescriptor.h  SetRNNDescriptor.cu  SetRNNDescriptor.h
Source/RecurrentNeuralNetwork/Modules/: Cell.h  GetWeightsAndBias.cu  GetWeightsAndBias.h  Hidden.h  Input.h  Output.h  Weight.cu  Weight.h
Source/RecurrentNeuralNetwork/Operations/: BackwardOnWeights.h  backward_on_data.h  forward.cu  forward.h
Source/Tensors/: CMakeLists.txt
Source/Tensors/ManageDescriptor/: GetNDTensorDescriptorValues.h  SetFor4DTensor.cu  SetFor4DTensor.h  SetForNDTensor.cu  SetForNDTensor.h  TensorDescriptor.cu  TensorDescriptor.h
Source/Transformer/: CMakeLists.txt
Source/Transformer/Attention/: Parameters.cu  Parameters.h  WeightWorkAndReserveSpaces.cu  WeightWorkAndReserveSpaces.h
Source/Transformer/ManageDescriptor/: AttentionDescriptor.cu  AttentionDescriptor.h  LibraryHandleDropoutsAttention.cu  LibraryHandleDropoutsAttention.h  SequenceDataDescriptor.cu  SequenceDataDescriptor.h  SetAttentionDescriptor.cu  SetAttentionDescriptor.h  SetSequenceDataDescriptor.cu  SetSequenceDataDescriptor.h
Source/Transformer/Operations/Attention/: BackwardOnData.h  Forward.h
Source/UnitTests/: CMakeLists.txt
Source/UnitTests/Activation/: Forward_tests.cu
Source/UnitTests/Activation/ManageDescriptor/: ActivationDescriptor_tests.cu  SetDescriptor_tests.cu
Source/UnitTests/Algebra/Modules/Tensors/: Tensor4D_tests.cu
Source/UnitTests/Algebra/Modules/Vectors/: RunTimeVoidPtrArray_tests.cu  VoidPtrArray_tests.cu
Source/UnitTests/DataWrangling/Kaggle/: TransformDigitRecognizerData_tests.cpp
Source/UnitTests/DeepNeuralNetwork/: cuDNNLibraryHandle_tests.cu
Source/UnitTests/FrontEnd/Tensors/: CreateTensor_tests.cu  Tensors_tests.cu
Source/UnitTests/Networks/RecurrentNeuralNetworks/LSTM/: LSTM_tests.cu
Source/UnitTests/RecurrentNeuralNetwork/: Parameters_tests.cu  SequenceLengthArray_tests.cu  WeightSpace_tests.cu  WorkAndReserveSpaces_tests.cu
Source/UnitTests/RecurrentNeuralNetwork/ManageDescriptor/: CellDescriptor_tests.cu  DataDescriptor_tests.cu  DropoutDescriptor_tests.cu  HiddenDescriptor_tests.cu  LibraryHandleDropoutRNN_tests.cu  SetDataDescriptor_tests.cu  SetDropoutDescriptor_tests.cu  SetRNNDescriptor_tests.cu
Source/UnitTests/RecurrentNeuralNetwork/Modules/: GetWeightsAndBias_tests.cu  Weight_tests.cu
Source/UnitTests/RecurrentNeuralNetwork/Operations/: BackwardOnData_tests.cu  BackwardOnWeights_tests.cu  Forward_tests.cu
Source/UnitTests/Tensors/ManageDescriptor/: GetNDTensorDescriptorValues_tests.cu  SetFor4DTensor_tests.cu  SetForNDTensor_tests.cu  TensorDescriptor_tests.cu
Source/UnitTests/Transformer/: TestValues.cu  TestValues.h
Source/UnitTests/Transformer/Attention/: WeightWorkAndReserveSpaces_tests.cu
Source/UnitTests/Transformer/ManageDescriptor/: AttentionDescriptor_tests.cu  LibraryHandleDropoutsAttention_tests.cu  SetAttentionDescriptor_tests.cu  SetSequenceDataDescriptor_tests.cu
Source/UnitTests/Utilities/: CuDNNDataTypeToType_tests.cu
Source/UnitTests/Utilities/DeviceManagement/: GetCUDADeviceProperties_tests.cu
Source/UnitTests/Utilities/FileIO/: DataPaths_tests.cpp
Source/Utilities/: CMakeLists.txt  CuDNNDataTypeToSize.cu  CuDNNDataTypeToSize.h  CuDNNDataTypeToType.h
Source/Utilities/DeviceManagement/: GetCUDADeviceProperties.cu  GetCUDADeviceProperties.h
Source/Utilities/ErrorHandling/: HandleUnsuccessfulCuDNNCall.cu  HandleUnsuccessfulCuDNNCall.h  HandleUnsuccessfulCudaCall.cu  HandleUnsuccessfulCudaCall.h
Source/Utilities/FileIO/: DataPaths.h
Source/Utilities/Time/: WrangleDates.cpp  WrangleDates.h
dependencies/: CMakeLists.txt
examples/: LinReg.ipynb  LogReg.ipynb  Makefile  RModule.cu  RModule.ipynb  linreg.cu  logreg.cu  testAxon_act.cu
src/: README.md
src/Axon/: Axon.cu  Axon.h  activationf.cu  activationf.h
src/Feedfwd/: DNN.cu  DNN.h  Feedfwd.cu  Feedfwd.h  Feedfwd_deep.cu  Feedfwd_deep.h
src/FileIO/: FileIO.cpp  FileIO.h
src/analyze/: accuracy.cu  accuracy.h
src/smartCUBLAS/: smartCUBLAS.cu  smartCUBLAS.h
src/smartptr/: smartptr.cu  smartptr.h
unit_tests/utilities/: test_configure_paths.py
(+11 files in other folders)
